--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-frosty-bread-a17k5w02-pooler.ap-southeast-1.postgres.vercel-storage.com"
 POSTGRES_PASSWORD="u65eYDbSvlKm"
 POSTGRES_DATABASE="verceldb"
+
+ENV_CHECK="production"
