--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.0.0",
-    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.321.0",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
